 * Keep-alive support for libcurl
 * Explicit cookie helpers - #cookie=, #cookie?
 * Response code checkers: ok?, redirect?, created? etc.
 * Alias deserialise as deserialize
 * Ensure Components::Container is ActiveModel compliant

== Current
 * GH#13 Works for get and delete with parameters appended to the uri string and 
   with ? and no parameters appended to the uri string

== 1.0.0.beta2
 * GH#2 Make Components::Containers hash store a HashWithIndifferentAccess
 * GH#6 Net::HTTP based calls to Twitter public APIs fail
 * GH#5 Patron (curl) support failing for responses where headers have multiple values
 * GH#7 Build fails on Ruby 1.9
 * GH#16 Remove jeweler and use .gemspec direcly
 
== 1.0.0.beta1
 * If libxml-ruby isn't found but nokogiri, don't warn about libxml-ruby

== 1.0.0.beta0
 * Dependencies updated to ActiveSupport 3.0.0.rc and RSpec 2.0.0.beta19

== 0.1.2
 * Locked gem dependencies to ActiveSupport 2.3.8 and rspec 1.3.0 to avoid breakages caused by inadvertently requiring the Rails 3.0 and Rspec 2.0 gems which have changed greatly

== 0.1.1
 * Multipart post and put using Net::Http

== 0.1.0
 * Added Nokogiri as a fallback for LibXML Ruby before we give up and use REXML. (Nokogiri is available on JRuby, unlike LibXML-ruby)
 * Added code to attempt to load JREXML (for what it's worth) when using REXML on JRuby
 * Ensure that Wrest throws an exception when an actual request is made in a test environment in Rails (RAILS_ENV == 'test')
 * Support for keep-alive connections via Wrest::Http::Session and Wrest::Http::Response#connection_closed?
 * Create two convenience Post methods on Uri - one for application/x-www-form-urlencoded and the other normal