@@ -19,7 +19,9 @@ Features under a numbered section are complete and available in the Wrest gem.
 == Current
  * GH#13 Works for get and delete with parameters appended to the uri string and 
    with ? and no parameters appended to the uri string
-
+ * GH#26 'http://localhost'.to_uri['foo/bar'] fails
+ * GH#11 Handle gem dependencies using bundler
+ 
 == 1.0.0.beta2
  * GH#2 Make Components::Containers hash store a HashWithIndifferentAccess
  * GH#6 Net::HTTP based calls to Twitter public APIs fail
